--- a/2.1_List/Project_2-1/Project_2-1.vcxproj
+++ b/2.1_List/Project_2-1/Project_2-1.vcxproj
@@ -115,6 +115,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CList.cpp" />
+    <ClCompile Include="CNode.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
