--- a/2.2_Stack/Project_2-2/Project_2-2.vcxproj
+++ b/2.2_Stack/Project_2-2/Project_2-2.vcxproj
@@ -117,11 +117,13 @@
   <ItemGroup>
     <ClCompile Include="CList.cpp" />
     <ClCompile Include="CNode.cpp" />
+    <ClCompile Include="CStack.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CList.h" />
     <ClInclude Include="CNode.h" />
+    <ClInclude Include="CStack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
